(lang dune 3.3)

(name tipl)

(generate_opam_files true)

(source
 (github Ranxy/tipl))

(authors "Ranxy")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name tipl)
 (synopsis "Theory and implementation of programming language homework")
 (description "Homework of https://bobzhang.github.io/courses/")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
